<resources>
    <string name="app_name">Unit Converter</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string-array name = "spinnerOptions">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
    <string name="value_label">Value</string>
    <string name="value_hint">Enter a value</string>
    <string name="convert_label">CONVERT</string>
    <string name="results_label">Results</string>
    <string name="toast_noCon">No conversion needed!</string>
    <string name="toast_noVal">Please enter a value!</string>
    <string name="noInput">Null</string>
</resources>