<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- From Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fromLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/from_label"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/spinnerOptions"/>
    </LinearLayout>

    <!-- To Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/to_label"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/spinnerOptions"/>
    </LinearLayout>

    <!-- Value Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/valueLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/value_label"
            android:textAlignment="center"
            android:textColor="#227BBC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="@string/value_hint"
            android:hint="@string/value_hint"
            android:inputType="number"
            android:textColor="#525252"
            android:textColorHint="#707070" />
    </LinearLayout>

    <!-- Convert Button -->
    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:text="@string/convert_label"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
